<resources>
    <string name="app_name">Kamyab Calculator</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="add">+</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="minus">-</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="multiply">*</string>
    <string name="c">C</string>
    <string name="zero">0</string>
    <string name="equals">=</string>
    <string name="divide">/</string>
    <string name="mudulo">%</string>
    <string name="pow">POW</string>
    <string name="min">MIN</string>
    <string name="max">MAX</string>
    <string name="advance">advance - scientific</string>
    <string name="standard">standard</string>
    <string name="title_s">Simple Calculator</string>
    <string name="title_a">Scientific Calculator</string>
</resources>