<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"

    android:weightSum="4"
    >
    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:textSize="15sp"
        android:textColor="@color/gray"
        android:gravity="center"
        android:text="@string/title_s"
        />
    <TextView
        android:id="@+id/result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:textSize="25sp"
        android:textColor="@color/black"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="15dp"
        android:paddingRight="15dp">


        <Button
            android:text="@string/one"
            style="@style/buttonStyle" />

        <Button
            android:text="@string/two"
            style="@style/buttonStyle"/>

        <Button
            android:text="@string/three"
            style="@style/buttonStyle"/>

        <Button
            android:text="@string/add"
            style="@style/buttonStyle"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="15dp"
        android:paddingRight="15dp">

        <Button
            android:text="@string/four"
            style="@style/buttonStyle"/>

        <Button
            android:text="@string/five"
            style="@style/buttonStyle"/>

        <Button
            android:text="@string/six"
            style="@style/buttonStyle"/>

        <Button
            android:text="@string/minus"
            style="@style/buttonStyle"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="15dp"
        android:paddingRight="15dp">

        <Button
            android:text="@string/seven"
            style="@style/buttonStyle"/>

        <Button
            android:text="@string/eight"
            style="@style/buttonStyle"/>

        <Button
            android:text="@string/nine"
            style="@style/buttonStyle"/>

        <Button
            android:text="@string/multiply"
            style="@style/buttonStyle"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="15dp"
        android:paddingRight="15dp">

        <Button
            android:text="@string/c"
            android:onClick="clearEvent"
            style="@style/buttonStyle"/>

        <Button
            android:text="@string/zero"
            style="@style/buttonStyle"/>

        <Button
            android:text="@string/equals"
            android:onClick="resultEvent"
            style="@style/buttonStyle"/>

        <Button
            android:text="@string/divide"
            style="@style/buttonStyle"/>

    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@color/black"
        android:layout_marginVertical="20dp">
        <Button
            android:id="@+id/advanced_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/advance"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:backgroundTint="@color/gray"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/advanced_page"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="20dp"
        android:background="@color/black"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:visibility="gone">

        <Button
            android:id="@+id/modulo"
            android:text="@string/mudulo"
            style="@style/buttonAdvanced"
            />

        <Button
            android:id="@+id/POW"
            android:text="@string/pow"
            style="@style/buttonAdvanced" />

        <Button
            android:id="@+id/MIN"
            android:text="@string/min"
            style="@style/buttonAdvanced" />

        <Button
            android:id="@+id/MAX"
            android:text="@string/max"
            style="@style/buttonAdvanced"/>

    </LinearLayout>

</LinearLayout>